Initial commit of a Django 1.8.x project template used for AWS deployments and local development on an Ubuntu 14.04 Virtualbox.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ sqlnet.log
 *.pid
 *.pyc
 *.pot
-local_settings.py
 .vagrant
 *.sqlite3
+# Generated files
+secure.py
+gunicorn.py
+# Where static files are collected
+http_static
